nbtio array read/write test and trace write

--- a/Bertl/Makefile
+++ b/Bertl/Makefile
@@ -1,13 +1,22 @@
 
-CFLAGS = -Wall -g -std=c99 -O2
+CFLAGS = -Wall -g -std=c99 -O2 -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -MD
 LFLAGS = -g
 
-all : nbt2ascii ascii2nbt
+LDFLAGS = -lgc
+LDLIBS = $(shell pkg-config --libs glib-2.0)
+
+
+TARGETS = nbt2ascii ascii2nbt nbtio_test
+
+all : $(TARGETS)
+
+nbtio_test : nbtio.o nbtio_test.o
+
 
 %.o : %.c
 	$(CC) $(CFLAGS) -c $<
 
 clean :
 	rm -f *~ *.o 
-	rm -f nbt2ascii ascii2nbt
+	rm -f $(TARGETS)
 
