add generate default trace binary

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ CFLAGS = -Werror -O2 -std=c99 -g \
 LDFLAGS = -lgc
 LDLIBS = $(shell pkg-config --libs glib-2.0)
 
-BINS = _test
+BINS = _test generate_default_trace
 
 SRCS = $(wildcard *.c)
 OBJS = $(SRCS:.c=.o)
@@ -13,7 +13,9 @@ DEPS = $(OBJS:.o=.d)
 
 all: $(BINS)
 
-$(BINS): $(OBJS)
+# FIXME: generalize this again
+_test: $(filter-out generate_default_trace%, $(OBJS)) 
+generate_default_trace: $(filter-out _test%, $(OBJS))
 
 clean:
 	rm -f *~ *.o *.d $(BINS)
