--- a/src/Makefile
+++ b/src/Makefile
@@ -5,17 +5,18 @@ CFLAGS = -Werror -O2 -std=c99 -g \
 LDFLAGS = -lgc
 LDLIBS = $(shell pkg-config --libs glib-2.0)
 
-BINS = _test generate_default_trace
+BINS = _test generate_default_trace run_trace
 
-SRCS = $(wildcard *.c)
+SRCS = $(filter-out nbtio_test%, $(wildcard *.c))
 OBJS = $(SRCS:.c=.o)
 DEPS = $(OBJS:.o=.d)
 
 all: $(BINS)
 
 # FIXME: generalize this again
-_test: $(filter-out generate_default_trace%, $(OBJS)) 
-generate_default_trace: $(filter-out _test%, $(OBJS))
+_test: $(filter-out generate_default_trace% run_trace%, $(OBJS)) 
+generate_default_trace: $(filter-out _test% run_trace%, $(OBJS))
+run_trace: $(filter-out _test% generate_default_trace%, $(OBJS))
 
 clean:
 	rm -f *~ *.o *.d $(BINS)
