make_plan compiles

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ CFLAGS = -Werror -O2 -std=c99 -g \
 LDFLAGS = -lgc
 LDLIBS = $(shell pkg-config --libs glib-2.0)
 
-BINS = _test generate_default_trace run_trace
+BINS = _test generate_default_trace run_trace make_plan
 
 SRCS = $(filter-out nbtio_test%, $(wildcard *.c))
 OBJS = $(SRCS:.c=.o)
@@ -14,9 +14,10 @@ DEPS = $(OBJS:.o=.d)
 all: $(BINS)
 
 # FIXME: generalize this again
-_test: $(filter-out generate_default_trace% run_trace%, $(OBJS)) 
-generate_default_trace: $(filter-out _test% run_trace%, $(OBJS))
-run_trace: $(filter-out _test% generate_default_trace%, $(OBJS))
+_test: $(filter-out generate_default_trace% run_trace% make_plan%, $(OBJS)) 
+generate_default_trace: $(filter-out _test% run_trace% make_plan%, $(OBJS))
+run_trace: $(filter-out _test% generate_default_trace% make_plan%, $(OBJS))
+make_plan: $(filter-out _test% generate_default_trace% run_trace%, $(OBJS))
 
 clean:
 	rm -f *~ *.o *.d $(BINS)
