Makefile: hack to fix auto deps

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 # Add all targets (files with main fun ) to MAINS, even if unimportant!
 
-CPPFLAGS = -MD
+CPPFLAGS = -MMD
 CC = gcc
 CFLAGS = -Werror -O2 -std=c99 -g \
 	$(shell pkg-config --cflags glib-2.0)
@@ -10,17 +10,23 @@ LDLIBS = $(shell pkg-config --libs glib-2.0)
 MAINS = _test nbtio_test generate_default_trace run_trace make_plan
 MAIN_OBJS = $(patsubst %, %.o, $(MAINS))
 
-SRCS = $(filter-out nbtio_test%, $(wildcard *.c))
+SRCS = $(filter-out $(MAINS), $(wildcard *.c))
 OBJS = $(SRCS:.c=.o)
+NONMAIN_OBJS = $(filter-out $(MAIN_OBJS), $(OBJS))
 DEPS = $(OBJS:.o=.d)
+FIXEDDEPS = $(DEPS:.d=.df)
 
 all: $(MAINS)
 
-$(MAINS): $(filter-out $(MAIN_OBJS), $(OBJS))
+$(MAINS): $(NONMAIN_OBJS)
+
+%.df: %.d
+	sed -r 's#/usr/[^[:space:]]+##g' < $< > $@
+
+-include $(FIXEDDEPS)
 
 clean:
-	rm -f *~ *.o *.d $(MAINS)
+	rm -f *~ *.o *.d *.df $(MAINS)
 
 .PHONY: all clean
 
--include $(DEPS)
