Support full problems in execution.

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ CPPFLAGS = -MMD
 CC = gcc
 CFLAGS = -Werror -O0 -std=c99 -g \
 	$(shell pkg-config --cflags glib-2.0)
-LDFLAGS = -lgc
+LDFLAGS = -lgc -lm
 LDLIBS = $(shell pkg-config --libs glib-2.0)
 
 MAINS = _test _test_blobs _test_matrixflush nbtio_test route_test generate_default_trace run_trace make_plan txt2nbt nbt2txt build
